--- a/nmtsa_cms/requirements.txt
+++ b/nmtsa_cms/requirements.txt
@@ -1,10 +1,14 @@
 anyascii==0.3.2
 asgiref==3.8.1
 beautifulsoup4==4.12.3
+cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
+cryptography==43.0.1
 defusedxml==0.7.1
 Django==4.2.16
+django-allauth==65.0.2
 django-filter==24.3
 django-modelcluster==6.3
 django-permissionedforms==0.1
@@ -14,19 +18,38 @@ djangorestframework==3.15.2
 draftjs-exporter==5.0.0
 et-xmlfile==1.1.0
 filetype==1.2.0
+google-api-core==2.21.0
+google-api-python-client==2.149.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.65.0
+httplib2==0.22.0
 idna==3.10
 l18n==2021.3
 laces==0.1.1
+oauthlib==3.2.2
 openpyxl==3.1.5
 pillow==10.4.0
 pillow_heif==0.18.0
+proto-plus==1.24.0
+protobuf==5.28.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+PyJWT==2.9.0
+pyparsing==3.1.4
 pytz==2024.2
 requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
 six==1.16.0
 soupsieve==2.6
 sqlparse==0.5.1
 telepath==0.3.1
 typing_extensions==4.12.2
+tzdata==2024.2
+uritemplate==4.1.1
 urllib3==2.2.3
 wagtail==6.2.2
 Willow==1.8.0
